--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+#ignores de git
+#--------------------------------------------------------
 /vendor/
 node_modules/
 npm-debug.log
@@ -21,3 +23,19 @@ Homestead.yaml
 Homestead.json
 /.vagrant
 .phpunit.result.cache
+
+#ignores de laravel
+#--------------------------------------------------------
+/.phpunit.cache
+/node_modules
+/public/build
+/public/hot
+/public/storage
+/storage/*.key
+/vendor
+.env.backup
+.env.production
+auth.json
+/.fleet
+/.idea
+/.vscode
